--- a/src/app/matching-income/matching-income.component.html
+++ b/src/app/matching-income/matching-income.component.html
@@ -22,7 +22,7 @@
     }
 </style>
 
-<h2 class="fw-bold">Sponsor Income</h2>
+<h2 class="fw-bold">Matching Income</h2>
 <table>
     <thead>
         <tr>
