--- a/src/app/withdraw/withdraw.component.html
+++ b/src/app/withdraw/withdraw.component.html
@@ -9,7 +9,8 @@
   
 
     <h2 class="fw-bold">Withdraw Funds</h2>
-    <table>
+   <div class="table-responsive">
+     <table class="table">
         <thead>
             <tr>           
                 <th>S.No</th>
@@ -36,12 +37,7 @@
             </tr>
         </tbody>
     </table>
-
-    
-
-
-
-      
+   </div>
 
   <div class="modal fade" id="withdrawModal" tabindex="-1" aria-labelledby="withdrawModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
