--- a/src/app/deposit/deposit.component.html
+++ b/src/app/deposit/deposit.component.html
@@ -5,8 +5,7 @@
 </div>
 
     <h2 class="fw-bold">Deposit Funds</h2>
-  <div class="table-responsive">
-      <table class="table">
+    <table>
         <thead>
             <tr>           
                 <th>S.No</th>
@@ -30,7 +29,6 @@
             </tr>
         </tbody>
     </table>
-  </div>
 
     <div class="modal fade" id="addFundModal" tabindex="-1" aria-labelledby="addFundModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered ">
