--- a/src/app/tree-view/tree-view.component.html
+++ b/src/app/tree-view/tree-view.component.html
@@ -72,15 +72,15 @@
                          </tr>
                        </thead>
                        <tbody>
-                         <tr>
-                           <th class="text-primary">Total</th>
-                           <th>{{ tdata.mleft }}</th>
+                         <!-- <tr>
+                           <th>Total Active</th>
+                           <th>{{ tdata.mleft }} </th>
                            <td>{{ tdata.mright }}</td>
-                         </tr>
-                          <tr>
-                           <th class="text-secondary">Level Users</th>
-                           <th>{{ tdata.mlevelleft }}</th>
-                           <td>{{ tdata.mlevelright }}</td>
+                         </tr> -->
+                         <tr>
+                           <th class="text-secondary">Inactive Users</th>
+                           <th>{{ tdata.mfreeleft }}</th>
+                           <td>{{ tdata.mfreeright }}</td>
                          </tr>
                          <tr>
                            <th class="text-success">Silver Members</th>
@@ -132,14 +132,9 @@
                        </thead>
                        <tbody>
                          <tr>
-                           <th class="text-primary">Total</th>
-                           <th>{{ tdata.mleft }}</th>
-                           <td>{{ tdata.mright }}</td>
-                         </tr>
-                          <tr>
-                           <th class="text-secondary">Level Users</th>
-                           <th>{{ tdata.mlevelleft }}</th>
-                           <td>{{ tdata.mlevelright }}</td>
+                           <th class="text-secondary">Inactive Users</th>
+                           <th>{{ tdata.mfreeleft }}</th>
+                           <td>{{ tdata.mfreeright }}</td>
                          </tr>
                          <tr>
                            <th class="text-success">Silver Members</th>
