--- a/src/app/withdraw/withdraw.component.html
+++ b/src/app/withdraw/withdraw.component.html
@@ -9,8 +9,7 @@
   
 
     <h2 class="fw-bold">Withdraw Funds</h2>
-   <div class="table-responsive">
-     <table class="table">
+    <table>
         <thead>
             <tr>           
                 <th>S.No</th>
@@ -37,7 +36,12 @@
             </tr>
         </tbody>
     </table>
-   </div>
+
+    
+
+
+
+      
 
   <div class="modal fade" id="withdrawModal" tabindex="-1" aria-labelledby="withdrawModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
