--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,12 +1,16 @@
 <div class="container-fluid wrapper ">
   <div class="row">
     <!-- Greeting Section -->
-    <div class="col-12 col-md-6 col-lg-3 mt-4" >
+    <div class="col-12 col-md-6 col-lg-3 mt-4" *ngIf="homedata?.profiledata && pfdata">
       <h4 class="mb-1">Hi,</h4>
-      <h4 class="mb-3">{{ pfdata.name }}, {{ pfdata.regid }}</h4>
-      <p *ngIf="pfdata?.topupstatus!='0'" class="text-success fw-bold" style="font-size: 20px;">
-        Your  Subscription is completed </p>
+      <h4 class="mb-3">
+        {{ homedata.profiledata.name }}, {{ homedata.profiledata.regid }}
+      </h4>
+      <p *ngIf="pfdata.topupstatus !== '0'" class="text-success fw-bold" style="font-size: 20px;">
+        Your Subscription is completed
+      </p>
     </div>
+    
 
     <!-- Share Link Section -->
     <div class="col-12 col-md-6 col-lg-3 mt-4 text-md-end">
@@ -18,7 +22,7 @@
         </h5>
         <!-- Share Icons -->
         <div *ngIf="showShareIcons" class="d-flex justify-content-md-end gap-3 mt-2">
-          <a (click)="sharwahtsapp(pfdata.regid)" target="_blank" title="WhatsApp">
+          <a (click)="sharwahtsapp(homedata.profiledata?.regid)" target="_blank" title="WhatsApp">
             <i class="fab fa-whatsapp fa-lg text-success"></i>
           </a>
           <a href="https://instagram.com" target="_blank" title="Instagram">
@@ -46,7 +50,7 @@
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="card h-100 text-center p-3 shadow-sm">
             <p class="mb-2">Deposit Fund</p>
-            <h3 class="mb-3">{{pfdata.actwallet | currency:'USD':true:'1.0-1'}}</h3>
+            <h3 class="mb-3">{{homedata.profiledata?.actwallet | currency:'USD':true:'1.0-1'}}</h3>
             <a href="#" class="btn btn-custom btn-deposit" data-bs-toggle="modal" data-bs-target="#addFundModal">DEPOSIT</a>
           </div>
         </div>
@@ -54,7 +58,7 @@
         <div class="col-12 col-sm-6 col-lg-4">
           <div class="card h-100 text-center p-3 shadow-sm">
             <p class="mb-2">Withdraw Fund</p>
-            <h3 class="mb-3">{{pfdata.walletamount | currency:'USD':true:'1.0-1'}}</h3>
+            <h3 class="mb-3">{{homedata.profiledata?.walletamount | currency:'USD':true:'1.0-1'}}</h3>
             <a href="javascript:void(0)" class="btn btn-success rounded-pill px-4" data-bs-toggle="modal" data-bs-target="#withdrawModal">WITHDRAW</a>
           </div>
         </div>
@@ -62,27 +66,26 @@
     </div>
   </div>
 </div>
-<!-- lll -->
 
 <div class="card p-4 mb-4" style="background-color: #fff; border-radius: 20px;">
   <h2 class="card-title">Income </h2>
-  <div class="row">
+  <div class="row" *ngIf="homedata">
     <div class="col-md-12">
       <div class="row mt-5">
-        <div class="col-sm-4 mb-2">
+        <div class="col-sm-4 ">
           <div class="card" style="background-color: #17A2B8; color: white; padding: 20px;">
             <h5> Sponsor Income</h5>
             <h3>${{homedata.sponcerincome}}</h3>
           </div>
         </div>
-        <div class="col-sm-4 mb-2">
+        <div class="col-sm-4">
           <div class="card" style="background-color: #30B32D; color: white; padding: 20px;">
             <h5> Level Binary Income</h5>
 
             <h3>${{homedata.levelbinary}}</h3>
           </div>
         </div>
-        <div class="col-sm-4 mb-2">
+        <div class="col-sm-4">
           <div class="card" style="background-color: #DC3545; color: white ; padding: 20px;">
             <h5> Sliver Income</h5>
             <h3>${{homedata.silverincome}}</h3>
@@ -90,31 +93,39 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-sm-4 mb-2"> 
+        <div class="col-sm-4"> 
           <div class="card" style="background-color: #F2873C; color: white;padding: 20px;">
             <h5> Gold Incoming</h5>
             <h3>${{homedata.goldincome}}</h3>
           </div>
         </div>
-        <div class="col-sm-4 mb-2">
+        <div class="col-sm-4">
           <div class="card" style="background-color: #FF0000; color: white; padding: 20px;">
             <h5> Diamond Incoming</h5>
             <h3>${{homedata.diamondincome}}</h3>
           </div>
         </div>
-        <div class="col-sm-4 mb-3" >
+        <!-- <div class="col-sm-4" *ngIf="homedata?.profiledata">
+          <div class="card" style="background-color: #08A046; color: white; padding: 20px;">
+            <h5> Holding Wallet</h5>
+            <h3>${{profiledata.upgrade}}</h3>
+          </div>
+        </div> -->
+        <div class="col-sm-4 mb-3" *ngIf="homedata.profiledata">
           <div class="card text-white" style="background-color: #08A046; padding: 20px;">
             <h5 class="mb-2">Holding Wallet</h5>
             <h3 class="mb-0">
-              {{ pfdata?.upgrade | currency:'USD':true:'1.0-1'}}
+              ${{ homedata.profiledata.upgrade}}
             </h3>
           </div>
         </div>
         
       </div>
     </div>
+
   </div>
 </div>
+
 
 
 <style>
@@ -157,7 +168,7 @@
 </style>
 <div class="card p-4 mb-4" style="background-color: #fff; border-radius: 20px;">
   <h2 class="card-title">My Users </h2>
-  <div class="container" >
+  <div class="container" *ngIf="homedata">
     <div class="row">
       <div class="col-md-3">
         <div class="card card-custom purple">
@@ -198,8 +209,9 @@
 </div>
 
 
+<!-- asbhdggit add .git add . -->
 
-<!-- end -->
+
 <!-- subcrition -->
 
 <style>
